--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,4 @@
-/* #gallery {
+#gallery {
   display: grid;
   gap: 2%;
   width: 100vw;
@@ -12,9 +12,9 @@
   padding: calc(1% + 1vmin) calc(2% + 1vmin);
   box-sizing: border-box;
   object-fit: cover;
-} */
+}
 
-#gallery {
+/* #gallery {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 16px;
@@ -22,14 +22,10 @@
 }
 
 #gallery img {
-  width: 100%;
-  height: 100%;
-  /* Make sure image fills its container */
+  max-width: 100%;
   object-fit: contain;
-  /* Ensures the full image is displayed without cropping */
   display: block;
-  /* Ensures there are no line-height related gaps below the image */
-}
+} */
 
 /* ... rest of your CSS remains unchanged ... */
 
@@ -72,20 +68,19 @@ body {
   /* Prevent horizontal scrolling */
 }
 
-/* Other styles related to logo, hamburger, and menu remain unchanged */
 
-.logo-placeholder {
-  position: absolute;
-  /* This ensures the logo stays fixed at its position */
+.logo {
+  position: fixed;
   top: 10px;
-  /* Offset from the top */
   left: 50%;
-  /* Center the logo */
   transform: translateX(-50%);
-  /* Adjusts for exact centering */
   z-index: 1000;
-  /* background-color: transparent; */
+}
 
+.logo img {
+  max-width: 300px;
+  height: auto;
+  z-index: 1000;
 }
 
 .hamburger {
@@ -95,13 +90,10 @@ body {
   flex-direction: column;
   justify-content: space-between;
   cursor: pointer;
-  position: absolute;
+  position: fixed;
   z-index: 1000;
-  /* Position it absolutely within its relative parent (body or any positioned ancestor) */
   top: 15px;
-  /* A little space from the top */
   right: 10px;
-  /* A little space from the right */
 }
 
 .line {
