--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,32 +1,3 @@
-#gallery {
-  display: grid;
-  gap: 2%;
-  width: 100vw;
-  height: 100vh;
-}
-
-#gallery img {
-  width: 100%;
-  height: auto;
-  display: block;
-  padding: calc(0.5% + 0.5vmin) calc(3% + 2vmin);
-  box-sizing: border-box;
-  object-fit: cover;
-}
-
-/* #gallery {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 16px;
-  width: 100%;
-}
-
-#gallery img {
-  max-width: 100%;
-  object-fit: contain;
-  display: block;
-} */
-
 /* Small screens - 1 column */
 @media (max-width: 600px) {
   #gallery {
@@ -66,6 +37,117 @@ body {
 }
 
 
+/*CHANGE BACK IF NEEDED*/
+/* .credits {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+  color: #fff;
+  opacity: 1;
+} */
+
+.credits {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  color: white;
+  padding: 10px;
+  box-sizing: border-box;
+  opacity: 0;
+  /* transition: opacity 0.3s ease-in-out; */
+  display: flex;
+  justify-content: center;
+  transform: translateY(-25%);
+  align-items: center;
+}
+
+/* IMAGE GALLERY STYLING */
+.image-container {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+  /* padding: calc(0.5% + 0.5vmin) calc(3% + 2vmin); */
+}
+
+.image-container::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: calc(100% - (0.5% + 0.5vmin) * 2);
+  height: auto;
+  background-color: rgba(0, 0, 0, 0);
+  transition: background-color 0.3s ease-in-out;
+  z-index: 1;
+}
+
+.image-container:hover .credits {
+  opacity: 1;
+}
+
+#gallery {
+  display: grid;
+  gap: 2%;
+  width: 100vw;
+  height: 100vh;
+}
+
+#gallery img {
+  width: 100%;
+  height: auto;
+  display: block;
+  padding: calc(0.5% + 0.5vmin) calc(3% + 2vmin);
+  box-sizing: border-box;
+  object-fit: cover;
+  transition: filter 0.3s ease-in-out;
+  position: relative;
+  z-index: 2;
+}
+
+.image-container:hover img {
+  filter: brightness(0.5);
+}
+
+
+.image-container::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: calc(100% - (0.5% + 0.5vmin) * 2);
+  /* adjusting for the padding on the img */
+  height: auto;
+  /* adjust the height */
+  background-color: rgba(0, 0, 0, 0.6);
+  /* This will darken the image */
+  transition: background-color 0.3s ease-in-out;
+  z-index: 1;
+  opacity: 0;
+  /* Initially hidden */
+}
+
+.image-container:hover::before {
+  background-color: rgba(0, 0, 0, 0.6);
+  /* Show dark background on hover */
+}
+
+
+/* LOGO AND HAMBURGER ICON */
+
 .logo {
   position: fixed;
   top: 5px;
@@ -75,9 +157,10 @@ body {
 }
 
 .logo img {
-  max-width: 500px;
+  max-width: 400px;
   height: auto;
   z-index: 1000;
+  filter: drop-shadow(0 0 0.75rem #ffd3e7);
 }
 
 .hamburger {
@@ -171,17 +254,6 @@ body {
 }
 
 
-
 .menu-item:hover {
   color: #aaa;
 }
-
-/* TO UNDO DAMAGE */
-/* #gallery {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  /* 2 columns by default */
-/* gap: 16px; */
-/* Add other styling as needed
-} 
-*/
