--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -37,24 +37,6 @@ body {
 }
 
 
-/*CHANGE BACK IF NEEDED*/
-/* .credits {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  color: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  opacity: 0;
-  transition: opacity 0.3s ease;
-  color: #fff;
-  opacity: 1;
-} */
-
 .credits {
   position: absolute;
   top: 0;
@@ -65,7 +47,8 @@ body {
   padding: 10px;
   box-sizing: border-box;
   opacity: 0;
-  /* transition: opacity 0.3s ease-in-out; */
+  z-index: 3;
+  transition: opacity 0.3s ease-in-out;
   display: flex;
   justify-content: center;
   transform: translateY(-25%);
@@ -78,24 +61,10 @@ body {
   display: block;
   width: 100%;
   height: 100%;
-  /* padding: calc(0.5% + 0.5vmin) calc(3% + 2vmin); */
-}
-
-.image-container::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: calc(100% - (0.5% + 0.5vmin) * 2);
-  height: auto;
-  background-color: rgba(0, 0, 0, 0);
-  transition: background-color 0.3s ease-in-out;
   z-index: 1;
 }
 
-.image-container:hover .credits {
+body #gallery .image-container:hover .credits {
   opacity: 1;
 }
 
@@ -120,29 +89,6 @@ body {
 
 .image-container:hover img {
   filter: brightness(0.5);
-}
-
-
-.image-container::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: calc(100% - (0.5% + 0.5vmin) * 2);
-  /* adjusting for the padding on the img */
-  height: auto;
-  /* adjust the height */
-  background-color: rgba(0, 0, 0, 0.6);
-  /* This will darken the image */
-  transition: background-color 0.3s ease-in-out;
-  z-index: 1;
-  opacity: 0;
-  /* Initially hidden */
-}
-
-.image-container:hover::before {
-  background-color: rgba(0, 0, 0, 0.6);
-  /* Show dark background on hover */
 }
 
 
@@ -242,8 +188,6 @@ body {
 
 }
 
-
-
 .menu-item {
   font-size: 70px;
   text-decoration: none;
@@ -252,7 +196,6 @@ body {
   color: #fff;
   margin-bottom: -25px;
 }
-
 
 .menu-item:hover {
   color: #aaa;
